server/compilers/goLiteJS/src/test/ml1/valid/top2.go
// top level declaration permutations
package main

func f(){}

var x int

type num int
