server/compilers/goLiteJS/src/test/ml1/invalid/decl3.go
// no type or expression in declaration
package main

var x
